# qilin

./: .dockerignore  .env.example  .gitattributes  .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  Dockerfile  README.md  coverage.xml  docker-compose.yml  pyproject.toml
.github/workflows/: cli-tests.yml  release.yml  tests.yml
cli/: .gitignore  .goreleaser.yaml  go.mod  go.sum
cli/cmd/qilin/: main.go
cli/internal/cli/: cert.go  config.go  doctor.go  init.go  init_run.go  lifecycle.go  proxy.go  root.go  version.go  version_test.go
cli/internal/compose/: compose.go  compose.tmpl.yaml  compose_test.go
cli/internal/config/: config.go  config_test.go  env.go  set.go
cli/internal/docker/: docker.go
cli/internal/doctor/: doctor.go
cli/internal/paths/: paths.go  paths_test.go
cli/internal/tls/: tls.go  tls_test.go
cli/internal/version/: version.go  version_test.go
cli/internal/wizard/: validate.go  wizard.go
cli/scripts/: codesign-darwin.sh
docs/: README.md  architecture.md  migrating-to-1.0.md  proposed-features.md
docs/recipes/: branch-aware-routing.md  code-search.md  code-vs-docs-collections.md  expose-on-lan.md  hybrid-search.md  incremental-ingest.md  recall-feedback-loop.md  scratch-vs-knowledge-collections.md  sse-on-localhost-with-cert.md  tuning-recall.md  watch-mode.md
packaging/homebrew-qilin/: README.md
scripts/: entrypoint.sh  install.ps1  install.sh
src/qilin/: __init__.py  analytics.py  auth.py  chunking.py  cli.py  code_chunking.py  config.py  dashboard_assets.py  embeddings.py  reranker.py  server.py  sparse.py  store.py  tools.py  workspace_scope.py
tests/: conftest.py  test_analytics.py  test_auth.py  test_chunking.py  test_cli.py  test_code_chunking.py  test_config.py  test_embeddings.py  test_hybrid.py  test_manifest.py  test_recall_postprocess.py  test_reranker.py  test_server.py  test_sparse.py  test_store.py  test_tools.py  test_version.py  test_watch.py  test_workspace_scope.py
tests/fixtures/: sample.go  sample.py  sample.ts
