[build-system]
requires = ["setuptools>=68", "wheel", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "qilin"
dynamic = ["version"]
description = "Qdrant-backed vector memory exposed over the Model Context Protocol (SSE)."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Qilin" }]
dependencies = [
    "mcp[cli]>=1.17.0",
    "starlette>=0.40.0",
    "uvicorn[standard]>=0.32.0",
    "qdrant-client>=1.18.0,<1.19.0",
    "httpx>=0.27.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.5.0",
    "tiktoken>=0.8.0",
    "typer>=0.16.0",
    "rich>=13.8.0",
    "pathspec>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "respx>=0.21.0",
    "ruff>=0.7.0",
]

[project.scripts]
qilin = "qilin.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

# Source of truth for the package version: annotated git tags `vX.Y.Z`.
# `write_to` materializes the resolved version into `src/qilin/_version.py`
# at build/install time so `qilin.__version__` is available at runtime.
# Inside the Docker image build (where `.git` is not in the context),
# release.yml sets `SETUPTOOLS_SCM_PRETEND_VERSION_FOR_QILIN` from the tag.
[tool.setuptools_scm]
write_to = "src/qilin/_version.py"
fallback_version = "0.0.0+unknown"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra -q --strict-markers --strict-config"
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]
filterwarnings = [
  "error::DeprecationWarning",
  "ignore:GitWildMatchPattern.*:DeprecationWarning",
]

[tool.coverage.run]
source = ["src/qilin"]
branch = true
parallel = true

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_also = [
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "\\.\\.\\.\\s*$",
]
